log-schemas/27.5/opcua_binary_browse_description.rst
``opcua_binary_browse_description`` field reference
---------------------------------------------------

.. list-table::
   :header-rows: 1
   :class: longtable
   :widths: 1 3

   * - Field (Type)
     - Description

   * - ``ts`` (time)
     - The ts information.

   * - ``uid`` (string)
     - The uid information.

   * - ``id.orig_h`` (string - addr)
     - The originator's IP address.

   * - ``id.orig_p`` (integer - port)
     - The originator's port number.

   * - ``id.resp_h`` (string - addr)
     - The responder's IP address.

   * - ``id.resp_p`` (integer - port)
     - The responder's port number.

   * - ``browse_description_link_id`` (string)
     - The browse_description_link_id information.

   * - ``browse_description_encoding_mask`` (string)
     - The browse_description_encoding_mask information.

   * - ``browse_description_namespace_idx`` (integer - count)
     - The browse_description_namespace_idx information.

   * - ``browse_description_numeric`` (integer - count)
     - The browse_description_numeric information.

   * - ``browse_description_string`` (string)
     - The browse_description_string information.

   * - ``browse_description_guid`` (string)
     - The browse_description_guid information.

   * - ``browse_description_opaque`` (string)
     - The browse_description_opaque information.

   * - ``browse_direction`` (string)
     - The browse_direction information.

   * - ``browse_description_ref_encoding_mask`` (string)
     - The browse_description_ref_encoding_mask information.

   * - ``browse_description_ref_namespace_idx`` (integer - count)
     - The browse_description_ref_namespace_idx information.

   * - ``browse_description_ref_numeric`` (integer - count)
     - The browse_description_ref_numeric information.

   * - ``browse_description_ref_string`` (string)
     - The browse_description_ref_string information.

   * - ``browse_description_ref_guid`` (string)
     - The browse_description_ref_guid information.

   * - ``browse_description_ref_opaque`` (string)
     - The browse_description_ref_opaque information.

   * - ``browse_description_include_subtypes`` (boolean - bool)
     - The browse_description_include_subtypes information.

   * - ``browse_node_class_mask`` (string)
     - The browse_node_class_mask information.

   * - ``browse_result_mask`` (string)
     - The browse_result_mask information.
